--- a/soc_net/account/templates/account/base.html
+++ b/soc_net/account/templates/account/base.html
@@ -14,7 +14,7 @@
         <div class="menu">
             {% if user.is_authenticated %}
                 <a href="{% url 'dashboard' %}">Панель</a>
-                <a href="{% url 'create-image' %}">Картинки</a>
+                <a href="{% url 'list-images' %}">Картинки</a>
                 <a href="#">Люди</a>
                 <span>Вы вошли как {{ user.first_name|default:user.username }}</span>
                 <a href="{% url 'logout' %}">Выйти</a>
@@ -34,5 +34,8 @@
     <div class="footer">
         <span class="footer-text">Все права поражены.</span>
     </div>
+    <!-- <script type="text/javascript"> 
+        document.getElementById("id_url").setAttribute('value',`${request.user}_default.png`);
+      </script> -->
 </body>
 </html>
