--- a/soc_net/account/templates/account/base.html
+++ b/soc_net/account/templates/account/base.html
@@ -15,7 +15,7 @@
             {% if user.is_authenticated %}
                 <a href="{% url 'dashboard' %}">Панель</a>
                 <a href="{% url 'list-images' %}">Картинки</a>
-                <a href="#">Люди</a>
+                <a href="{% url 'users-list' %}">Люди</a>
                 <span>Вы вошли как {{ user.first_name|default:user.username }}</span>
                 <a href="{% url 'logout' %}">Выйти</a>
             {% else %}
